发布第一篇blog

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
 # Profile information
-name: Fresh
-title: Fresh - Free Jekyll Theme
+name: kane
+title: 个人学习博客
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+ Stay hungry,Stay foolish
 permalink: ':title/'
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "artemsheludko.pw" # the base hostname & protocol for your site, e.g. http://example.com
@@ -13,7 +11,7 @@ url: "artemsheludko.pw" # the base hostname & protocol for your site, e.g. http:
 facebook: #Add your Facebook
 twitter: #Add your Twitter
 google-plus: #Add your Google+
-github: #Add your Github
+github: huxiaokang19 #Add your Github
 
 # Contact form
 email: #your-email@domain.com
