--- a/_config.yml
+++ b/_config.yml
@@ -1,43 +1,34 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+# Profile information
+name: Kane
+title: 个人学习
+description: > # this means to ignore newlines until "baseurl:"
+ Stay hungry,Stay foolish
+permalink: ':title/'
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "artemsheludko.pw" # the base hostname & protocol for your site, e.g. http://example.com
 
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: Alain's Tech Blog
-name: Alain's Tech Blog
-description: 
-  This is a blog of someone passionate about technology who wants to share some of the things he knows
-  about Application Development, Integration, Cloud, Big Data and Digital Transformation
-baseurl: "" # the subpath of your site, e.g. /blog
-github_username:  alainpham
+# Social
+facebook: #Add your Facebook
+twitter: #Add your Twitter
+google-plus: #Add your Google+
+github: #Add your Github
 
-# jekyll-paginate configuration
-paginate: 10
+# Contact form
+email: #your-email@domain.com
+
+# Comments
+discus-identifier: # Add your Disqus identifier
+
+# Paginate
+paginate: 5
+paginate_path: /page:num/
 
 # Build settings
 markdown: kramdown
-#theme: minima
-plugins:
+gems:
   - jekyll-feed
-  - jekyll-sitemap
   - jekyll-paginate
 exclude:
   - Gemfile
   - Gemfile.lock
-include: ["_pages"]
-permalink: /posts/:title/
-excerpt_separator: <!--more-->
-author: http://www.linkedin.com/in/alainpham
-
-host: 0.0.0.0
-
+include: [_pages]
