--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@ baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://huxiaokang19.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Social
-facebook: #Add your Facebook
-twitter: #Add your Twitter
-google-plus: #Add your Google+
-github: #Add your Github
+facebook: huxiaokang19 #Add your Facebook
+twitter: huxiaokang19 #Add your Twitter
+google-plus: huxiaokang19 #Add your Google+
+github: huxiaokang19 #Add your Github
 
 # Contact form
 email: #your-email@domain.com
